fix: scroll to top on ios

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -3875,3 +3875,9 @@ section {
 		}
 	}
 }
+
+@supports (-webkit-touch-callout: none) {
+  html {
+    scroll-behavior: auto !important;
+  }
+}
